--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,12 +1,19 @@
 global:
-  scrape_interval:     15s
-  evaluation_interval: 15s
+  scrape_interval:     30s
+  evaluation_interval: 30s
 
   labels:
       cluster: swarm
       replica: "1"
 
 scrape_configs:
+  - job_name: 'prometheus'
+    dns_sd_configs:
+    - names:
+      - 'tasks.prometheus'
+      type: 'A'
+      port: 9090
+
   - job_name: 'cadvisor'
     dns_sd_configs:
     - names:
