--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,3 +127,14 @@ services:
         reservations:
           cpus: '0.50'
           memory: 32M
+  elk:
+    image: sebp/elk
+    ports:
+      - "5601:5601"
+      - "9200:9200"
+      - "5044:5044"
+    networks:
+      - monitoring
+    deploy:
+      mode: replicated
+      replicas: 1
