Using by default the latest version of the prometheus image. It has some improvements in the alerting section.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
           memory: 16M
 
   prometheus:
-    image: basi/prometheus-swarm:${PROMETHEUS_SWARM_VERSION:-v1.7.1}
+    image: basi/prometheus-swarm:${PROMETHEUS_SWARM_VERSION:-latest}
     ports:
       - "9090"
     networks:
